# installer

./: .bazelrc  .ci-operator.yaml  .coderabbit.yaml  .dockerignore  .editorconfig  .envrc  .forge-task.json  .gitattributes  .gitignore  .gitmodules  .golangci-lint-v2.yaml  .golangci.yaml  .openshift_install_state.json  .travis.yml  .yamllint  AGENTS.md  BUILD  BUILD.bazel  CHANGELOG-release-image.md  CHANGELOG.md  CLAUDE-luis.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.openshift-installer  Gopkg.toml  Jenkinsfile  LICENSE  MAINTAINERS  Makefile  OWNERS  OWNERS_ALIASES  README.md  REBASE.md  ROADMAP.md  Troubleshooting_Ipv6.md  WORKSPACE  a-wrong-shell.sh  bill-of-materials.json  builder-run  (+30 more)
cmd/openshift-install/: BUILD.bazel  agent.go  agent_integration_test.go  agent_internal_integration_test.go  analyze.go  completions.go  coreos.go  create.go  destroy.go  explain.go  features.go  gather.go  graph.go  ignition.go  imagebased.go  imagebasedinstall.go  integration_test.go  internal-plugin.go  internal_integration_test.go  localcontrolplane.go  log-config.go  log.go  main.go  mcp.go  mcpresources.go  mcptools.go  migrate.go  rhcos-metadata.go  targets.go  tnf.go  upi.go  version.go  view.go  waitfor.go  watch.go
cmd/openshift-install/agent/: agentcontext.go  contextwrapper.go  create.go  gather.go  logs.go  waitfor.go  waitfor_test.go
cmd/openshift-install/command/: gather.go  log.go  waitfor.go  waitfor_node_test.go
contrib/terraform-examples/: BUILD.bazel  Gopkg.toml  README.md  main.go
data/: .gitignore  BUILD.bazel  assets.go  assets_generate.go  test_ignition.ign  unpack.go  unpack_test.go
data/data/: config.tf  fcos-amd64.json  fcos-stream.json  fcos.json  install.openshift.io_installconfigs.yaml  rhcos-aarch64.json  rhcos-amd64.json  rhcos-ppc64le.json  rhcos-s390x.json  rhcos-stream.json  rhcos.json  terraform.rc  tools.go
data/data/agent/: embed.go
data/data/alibabacloud/: .gitignore  main.tf  variables-alibabacloud.tf  variables.tf
data/data/aws/: main.tf  variables-aws.tf
data/data/azure/: config.tf  main.tf  variables-azure.tf  versions.tf
data/data/azurestack/: main.tf  variables-azurestack.tf  versions.tf
data/data/baremetal/: main.tf  variables-baremetal.tf  versions.tf
data/data/cluster-api/: aws-infrastructure-components.yaml  azure-infrastructure-components.yaml  azurestack-infrastructure-components.yaml  core-components.yaml  gcp-infrastructure-components.yaml  ibmcloud-infrastructure-components.yaml  nutanix-infrastructure-components.yaml  openstack-infrastructure-components.yaml  openstackorc-infrastructure-components.yaml  (+1 more)
data/data/coreos/: OWNERS  (+6 more)
examples/: BUILD.bazel  aws.yaml  bad-yaml-test.yaml  installer-iam-policy.json  libvirt.yaml  openshift.libvirt.yaml  tectonic.aws.yaml  tectonic.libvirt.yaml  tectonic.openstack.yaml  terraform.tfvars.aws  terraform.tfvars.azure  terraform.tfvars.gcp  terraform.tfvars.govcloud  terraform.tfvars.metal  terraform.tfvars.openstack-neutron  terraform.tfvars.openstack-nova  terraform.tfvars.vmware
images/tectonic-builder/: Dockerfile  Dockerfile.bazel  README.md
images/tectonic-error-server/: BUILD.bazel  Dockerfile  README.md  build-docker  glide.yaml  push  server.go
installer/: .dockerignore  .gitignore  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Makefile  README.md  glide.yaml
installer/api/: BUILD.bazel  api.go  errors.go  handlers_aws.go  handlers_containerlinux.go  handlers_frontend.go  handlers_latest_release.go  handlers_tectonic.go  handlers_terraform.go
installer/assets/: BUILD.bazel  assets.go  bootkube-start  console-deployment.yaml  console-svc.yaml  coreos-pull-secret.json.tmpl  doc.go  heapster-deployment.yaml  heapster-svc.yaml  identity-api-svc.yaml  identity-config.yaml.tmpl  identity-deployment.yaml  identity-svc.yaml  stats-emitter-deployment.yaml  tectonic-license-secret.json.tmpl  tectonic-namespace.yaml
installer/binassets/: doc.go
installer/examples/: aws-tf.json  aws-vpc.json  aws.json  metal.json  tectonic-aws-tf.progress  tectonic-aws-vpc.progress  tectonic-aws.progress  tectonic-baremetal.progress
installer/frontend/: .babelrc  .editorconfig  .eslintrc  BUILD.bazel  Makefile  actions.js  app.jsx  aws-actions.js  aws-api.js  check-versions.js  cidr.js  cluster-config.js  facts.js  fields.js  form.js  nav.jsx  nightwatch.json  package.json  platforms.js  readfile.js  reducer.js  server.js  store.js  tectonic-ga.js  trail.js  utils.js  validate.js
installer/scripts/: add_matchbox_hosts.sh  awsutil.sh  build-docker  delete.sh  filter.sh  lint-backend  push-docker  test  test-backend
installer/server/: assets.go  aws.go  aws_cluster.go  aws_handlers.go  aws_status.go  bootkube.go  cluster.go  create.go  etcd.go  frontend.go  handlers.go  health.go  images.go  kubernetes.go  kubernetes_test.go  matchbox.go  metal_cluster.go  metal_cluster_test.go  metal_status.go  metrics.go  parser_test.go  platforms.go  proxy.go  render.go  server.go  server_test.go  status.go  tectonic.go  tectonic_test.go  terraform.go
installer/tests/: Makefile  glide.yaml
installer/version/: BUILD.bazel  version.go
pkg/asset/: BUILD.bazel  asset.go  asset_test.go  assetgenerator.go  doc.go  filefetcher.go  filefetcher_test.go  filewriter.go  generator.go  installconfig.go  parents.go  parents_test.go  platform.go  state.go  state_test.go  stock.go  store.go  store_test.go  userprovided.go  userprovided_test.go
pkg/destroy/: BUILD.bazel  aws.go  destroyer.go  doc.go  volume.go
pkg/rhcos/: BUILD.bazel  ami.go  ami_regions.go  ami_regions_aarch64.go  ami_regions_generate.go  ami_regions_x86_64.go  azure.go  baremetal.go  baseuri.go  builds.go  doc.go  gcp.go  openstack.go  powervs_regions.go  qemu.go  stream.go  stream_fcos.go  stream_okd.go  stream_scos.go  vmware.go
pkg/terraform/: BUILD.bazel  diagnose.go  diagnose_test.go  doc.go  executor.go  init.go  logger.go  persist.go  stage.go  state.go  terraform.go
tests/smoke/: BUILD.bazel  README.md  bad-test.go  cluster_test.go  common_test.go  forensics.sh  glide.yaml  k8s_test.go  qa_test.go  smoke_test.go
(+5511 files in other folders)
