load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "assets.go",
        "unpack.go",
    ],
    importpath = "github.com/openshift/installer/data",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["unpack_test.go"],
    embed = [":go_default_library"],
)
