load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/openshift/installer/cmd/openshift-install",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/asset:go_default_library",
        "//pkg/asset/stock:go_default_library",
        "//vendor/github.com/Sirupsen/logrus:go_default_library",
        "//vendor/gopkg.in/alecthomas/kingpin.v2:go_default_library",
    ],
)

go_binary(
    name = "openshift-install",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
