load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/openshift/installer/cmd/openshift-install",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/asset:go_default_library",
        "//pkg/asset/stock:go_default_library",
        "//pkg/destroy:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/gopkg.in/alecthomas/kingpin.v2:go_default_library",
    ],
)

go_binary(
    name = "openshift-install",
    out = "openshift-install",
    embed = [":go_default_library"],
    # Use pure to build a pure-go binary.
    # This has the nice side effect of making the binary statically linked.
    pure = "on",
    visibility = ["//visibility:public"],
)
