load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "errors.go",
        "handlers_aws.go",
        "handlers_containerlinux.go",
        "handlers_frontend.go",
        "handlers_latest_release.go",
        "handlers_tectonic.go",
        "handlers_terraform.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/installer/api",
    visibility = ["//visibility:public"],
    deps = [
        "//installer/vendor/github.com/Sirupsen/logrus:go_default_library",
        "//installer/vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//installer/vendor/github.com/aws/aws-sdk-go/aws/awserr:go_default_library",
        "//installer/vendor/github.com/aws/aws-sdk-go/aws/credentials:go_default_library",
        "//installer/vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//installer/vendor/github.com/aws/aws-sdk-go/service/ec2:go_default_library",
        "//installer/vendor/github.com/aws/aws-sdk-go/service/iam:go_default_library",
        "//installer/vendor/github.com/aws/aws-sdk-go/service/route53:go_default_library",
        "//installer/vendor/github.com/aws/aws-sdk-go/service/route53domains:go_default_library",
        "//installer/vendor/github.com/coreos/go-semver/semver:go_default_library",
        "//installer/assets:go_default_library",
        "//installer/pkg/aws:go_default_library",
        "//installer/pkg/containerlinux:go_default_library",
        "//installer/pkg/tectonic:go_default_library",
        "//installer/pkg/terraform:go_default_library",
        "//installer/vendor/github.com/dghubble/sessions:go_default_library",
        "//installer/vendor/github.com/kardianos/osext:go_default_library",
        "//installer/vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//installer/vendor/k8s.io/client-go/pkg/api/v1:go_default_library",
        "//installer/vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
    ],
)
