# gazelle:ignore
package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        ":bindata",
        "assets.go",
        "doc.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/installer/assets",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "asset_files",
    srcs = glob(
        ["**/*"],
        exclude = ["bindata.go"],
    ),
)

genrule(
    name = "bindata",
    srcs = [
        ":asset_files",
        "//installer/frontend",
    ],
    outs = ["bindata.go"],
    cmd = "mkdir -p $(@D)/frontend/scripts && cp -R installer/assets/* $(@D) && cp $(location //installer/frontend:frontend) $(@D)/frontend/scripts && $(location //installer/vendor/github.com/jteeuwen/go-bindata/go-bindata:go-bindata) -o $@ -pkg assets -prefix $(@D) -ignore=$@ -ignore=doc.go -ignore=assets.go $(@D)/...",
    tools = [
        "//installer/vendor/github.com/jteeuwen/go-bindata/go-bindata",
    ],
)
