load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "asset.go",
        "doc.go",
        "state.go",
        "store.go",
        "userprovided.go",
    ],
    importpath = "github.com/openshift/installer/pkg/asset",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "state_test.go",
        "store_test.go",
        "userprovided_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
