load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["destroyer.go"],
    importpath = "github.com/openshift/installer/pkg/destroy",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/asset/metadata:go_default_library",
        "//pkg/types:go_default_library",
        "//vendor/github.com/openshift/hive/contrib/pkg/aws_tag_deprovision:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
