load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ami.go",
        "doc.go",
    ],
    importpath = "github.com/openshift/installer/pkg/rhcos",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
