load("@io_bazel_rules_go//go:def.bzl", "go_test", "go_prefix")

go_prefix("github.com/coreos/tectonic-installer/tests/smoke/tests/smoke")

go_test(
    name = "smoke",
    srcs = [
        "cluster_test.go",
        "common_test.go",
        "smoke_test.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/tests/smoke/tests/smoke",
    visibility = ["//visibility:public"],
    deps = [
        "//tests/smoke/vendor/github.com/coreos/ktestutil/testworkload:go_default_library",
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured:go_default_library",
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/util/errors:go_default_library",
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/pkg/api:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/pkg/api/v1:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/pkg/apis/extensions/v1beta1:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//tests/smoke/vendor/k8s.io/kubernetes/pkg/kubectl/cmd/util:go_default_library",
        "//tests/smoke/vendor/k8s.io/kubernetes/pkg/kubectl/resource:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cluster_test.go",
        "common_test.go",
        "smoke_test.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/tests/smoke",
    deps = [
        "//tests/smoke/vendor/github.com/coreos/ktestutil/testworkload:go_default_library",
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured:go_default_library",
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/util/errors:go_default_library",
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/pkg/api:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/pkg/api/v1:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/pkg/apis/extensions/v1beta1:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//tests/smoke/vendor/k8s.io/kubernetes/pkg/kubectl/cmd/util:go_default_library",
        "//tests/smoke/vendor/k8s.io/kubernetes/pkg/kubectl/resource:go_default_library",
    ],
)

filegroup(
    name = "test_vars",
    srcs = ["aws/vars/aws.tfvars.json", "bare-metal/vars/metal.tfvars.json"],
    visibility = ["//visibility:public"],
)
