load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "cluster_test.go",
        "common_test.go",
        "smoke_test.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured:go_default_library",
        "//tests/smoke/vendor/k8s.io/apimachinery/pkg/util/errors:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/pkg/api/v1:go_default_library",
        "//tests/smoke/vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//tests/smoke/vendor/k8s.io/kubernetes/pkg/kubectl/cmd/util:go_default_library",
        "//tests/smoke/vendor/k8s.io/kubernetes/pkg/kubectl/resource:go_default_library",
    ],
)
