load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "platforms.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/intaller/installer/cmd/installer",
    visibility = ["//visibility:private"],
    deps = [
        "//installer/vendor/github.com/Sirupsen/logrus:go_default_library",
        "//installer/vendor/github.com/coreos/pkg/flagutil:go_default_library",
        "//installer/api:go_default_library",
        "//installer/vendor/github.com/toqueteos/webbrowser:go_default_library",
    ],
)

go_binary(
    name = "installer",
    importpath = "github.com/coreos/tectonic-installer/intaller/installer/cmd/installer",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

