load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "platforms.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/installer/cmd/installer",
    visibility = ["//visibility:private"],
    deps = [
        "//installer/api:go_default_library",
        "//installer/vendor/github.com/Sirupsen/logrus:go_default_library",
        "//installer/vendor/github.com/coreos/pkg/flagutil:go_default_library",
        "//installer/vendor/github.com/toqueteos/webbrowser:go_default_library",
    ],
)

go_binary(
    name = "installer",
    embed = [":go_default_library"],
    importpath = "github.com/coreos/tectonic-installer/installer/cmd/installer",
    visibility = ["//visibility:public"],
    # Use pure to build a pure-go binary.
    # This has the nice side effect of making the binary statically linked.
    pure = "on",
)

go_binary(
    name = "darwin",
    basename = "installer",
    embed = [":go_default_library"],
    importpath = "github.com/coreos/tectonic-installer/installer/cmd/installer",
    visibility = ["//visibility:public"],
    # Use pure to build a pure-go binary.
    # This has the nice side effect of making the binary statically linked.
    pure = "on",
    goos = "darwin",
    goarch = "amd64",
)

go_binary(
    name = "linux",
    basename = "installer",
    embed = [":go_default_library"],
    importpath = "github.com/coreos/tectonic-installer/installer/cmd/installer",
    visibility = ["//visibility:public"],
    # Use pure to build a pure-go binary.
    # This has the nice side effect of making the binary statically linked.
    pure = "on",
    goos = "linux",
    goarch = "amd64",
)
